# solana-staking-dapp

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  项目说明.md
app/: README.md  index.html  package-lock.json  package.json  vite.config.js  快速开始.md
app/public/idl/: staking_dapp.json
app/src/: App.vue  main.js  polyfills.js  style.css
app/src/utils/: config.js  solana.js
migrations/: deploy.ts
programs/staking_dapp/: Cargo.toml
programs/staking_dapp/src/: lib.rs
tests/: staking_dapp.js
